[project]
name = "task_manager"
version = "0.1.0"
description = ""
authors = [
	{ name = "Захарчук Диана", email = "heilig1996@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2.11",
    "dj-database-url==2.1.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "uv==0.1.45"
]
