[project]
name = "task_manager"
version = "0.1.0"
description = "Task manager"
authors = [
	{ name = "Захарчук Диана", email = "heilig1996@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2.11",
    "dj-database-url==2.1.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise==6.9.0",
    "django-bootstrap-v5==1.0.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "task_manager/**/*",
    "manage.py",
    "static/**/*",
    "templates/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "uv==0.1.45"
]
