[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = [
	{ name = "Захарчук Диана", email = "heilig1996@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.9.0",
    "django_bootstrap5>=25.1",
    "django-filter>=24.3",
    "certifi>=2025.7.14",
    "charset_normalizer>=3.4.2",
    "idna>=3.10",
    "requests>=2.32.4",
    "rollbar>=1.3.0",
    "urllib3>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "task_manager/**/*",
    "manage.py",
    "static/**/*",
    "templates/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "uv>=0.1.45"
]

[coverage-run]
relative_files = "True"
source = "task_manager/"
branch = "True"
